[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "torch",
    "torchvision",
    "torchaudio",
    "markupsafe>=2.0,<3.0",  # pin so resolver takes from PyPI (rocm index has only 3.0.2 cp313)
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/rocm6.4"]